# job-hunter

./: .env.example  .gitignore  README.md  config.py  dashboard_server.py  main.py  pyproject.toml  requirements.txt
core/: discovery.py  resume_pdf.py  tailor.py
resumes/: README.md  ai_leadership.md  automation_ops.md  general_ai.md
src/: __init__.py  companies.py  discovery.py  tailor.py
submissions/: submitter.py
tests/: test_companies.py  test_dashboard_tracking.py  test_discovery_ats_responses.py  test_resume_selection.py
tracking/: tracker.py
ui/: dashboard.html
