[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-starter"
version = "0.1.0"
description = "Windows-first Python starter optimized for VS Code + Copilot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
files = ["src", "tracking", "main.py", "dashboard_server.py"]
mypy_path = ["src"]
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true
ignore_missing_imports = true